--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -32,8 +32,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Contador  631\n",
-      "Probabilidad estimada: 0.631\n"
+      "Contador  652\n",
+      "Probabilidad estimada: 0.652\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
     "    if suma > 7 or suma % 2 == 0: #Cuenta de los numeros y las veces que la suma fue mayor a 7 o n par\n",
     "        contador += 1\n",
     "# Calcular la probabilidad estimada\n",
-    "    probabilidad = contador / n_lanzamientos\n",
+    "probabilidad = contador / n_lanzamientos\n",
     "    \n",
     "print(\"Contador \", contador)\n",
     "print(\"Probabilidad estimada:\", probabilidad)\n",
@@ -83,15 +83,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "43\n",
-      "Probabilidad caso 1 (3 blancas y 2 rojas) 0.003\n",
-      "Probabilidad caso 2 (todas del mismo color) 0.043\n"
+      "4\n",
+      "40\n",
+      "Probabilidad caso 1 (3 blancas y 2 rojas) 0.004\n",
+      "Probabilidad caso 2 (todas del mismo color) 0.04\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
     "\n",
     "# Crear la caja con las bolas\n",
     "ball_box = {}\n",
@@ -103,29 +102,34 @@
     "    else:\n",
     "        ball_box[i] = \"Green\"\n",
     "\n",
+    "# variables y contadores que utilizaremos mas adelante\n",
     "n_veces = 1000\n",
     "cnt_caso_uno = 0 \n",
     "cnt_caso_dos = 0  \n",
     "\n",
+    "# bucle que hace el experimento el numero de veces que piden\n",
     "for i in range(n_veces):\n",
+    "    # Lista para almacenar los colores de las bolas seleccionadas\n",
     "    color_bolas = []\n",
-    "    \n",
+    "    # bucle que extrae 5 bolas al azar\n",
     "    for j in range(5):\n",
-    "        color_bolas.append(ball_box[random.randint(0, 59)])\n",
+    "        #Elige una bola aleatoria\n",
+    "        color_bolas.append(ball_box[np.random.randint(0, 60)])\n",
     "    \n",
+    "     # Cuenta cuantas bolas de cada color hay dentro de colos_bolas\n",
     "    cont_blanco = color_bolas.count(\"White\")\n",
     "    cont_rojas = color_bolas.count(\"Red\")\n",
     "    cont_verdes = color_bolas.count(\"Green\")\n",
-    "    \n",
+    "    #If del caso 1 . 3 bolas blancas y 2 rojas\n",
     "    if cont_blanco == 3 and cont_rojas == 2:\n",
-    "        cnt_caso_uno += 1\n",
-    "    \n",
+    "        cnt_caso_uno += 1 #Incrementa el cont de caso 1\n",
+    "    # If del caso 2. 5 bolas del mismo color\n",
     "    if cont_blanco == 5 or cont_rojas == 5 or cont_verdes == 5:\n",
-    "        cnt_caso_dos += 1\n",
+    "        cnt_caso_dos += 1 #Incrementa el cont de caso 2\n",
     "\n",
     "\n",
-    "probabilidad_caso_uno = cnt_caso_uno / n_veces\n",
-    "probabilidad_caso_dos = cnt_caso_dos / n_veces\n",
+    "probabilidad_caso_uno = cnt_caso_uno / n_veces #Sacamos la probabilidad del caso 1\n",
+    "probabilidad_caso_dos = cnt_caso_dos / n_veces #Sacamos la probabilidad del caso 2\n",
     "print(cnt_caso_uno)\n",
     "print(cnt_caso_dos)\n",
     "print(\"Probabilidad caso 1 (3 blancas y 2 rojas)\",probabilidad_caso_uno)\n",
